--- a/demo.html
+++ b/demo.html
@@ -5,18 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    #divpicker{
+      width: 100px;
+      height: 20px;
+      border:1px solid #999;
+      display: inline-block;
+    }
+  </style>
 </head>
+
 <body>
-  <div>输入框颜色选择器<input type="text" id="inputpicker"></div>
-  <div>button颜色选择器<button>button</button></div>
-  <div>div颜色选择器<div id="divpicker" style="width:100px;height:100px;border:1px solid #000"></div></div>
+  <form action="">
+      <label for="inputpicker"><div>输入框颜色选择器<input type="text" id="inputpicker"></div></label>
+      <div>button颜色选择器<button id="buttonpicker">button</button></div>
+      <div>div颜色选择器<div id="divpicker" ></div></div>
+  </form>
+  
 
 
-  <script src="./src/index.js"></script>
+  <script src = "./src/index.js">
+  </script>
   <script>
-    //绑定对象
-    atestfun({
-      ele: '#divpicker'
+    colorPicker({
+      ele: '#inputpicker',
+      height: 100
+    })
+    colorPicker({
+      ele: '#buttonpicker',
+      height: 150
+    })
+    colorPicker({
+      ele: '#divpicker',
+      height: 200
     })
   </script>
 </body>
