--- a/demo.html
+++ b/demo.html
@@ -25,8 +25,7 @@
   
 
 
-  <script src = "./index.js">
-  </script>
+  <script src = "./index.js"></script>
   <script>
     colorPicker({
       ele: '#inputpicker',
