--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,7 @@
     <label for="inputpicker"><div>输入框颜色选择器<input type="text" id="inputpicker" readonly></div></label>
     <div>div颜色选择器<div id="divpicker" ></div></div>
   </form>
-  
+  <div id="showColor"></div>
 
 
   <script src = "./index.js"></script>
